test/bad/arrays/comprehension14.px

[for x in [] yield x, x]
